# FERIS

./: AGENTS.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  ldpm_tet4_tets.vtk
cmake/: FERISConfig.cmake.in
docs/: ARCHITECTURE.md  BUILDING.md  GETTING_STARTED.md  LDPMTet4_implementation.md  NAMING_CONVENTIONS.md  SOLVER_ELEMENT_COMPATIBILITY.md  TROUBLESHOOTING.md
examples/: CMakeLists.txt  README.md  beam_linear_static.cc  beam_linear_static_t4.cc  beam_simulation.cc  test_feat10_nesterov.cc  test_ldpm_t4.cc  test_ldpm_tet4.cc  test_leapfrog_t4.cc
examples/Dogbone/: CMakeLists.txt  dogbone_cpuref.cpp  dogbone_forcebc.cc  dogbone_leapfrog.cc  dogbone_velbc.cc  dogbone_vtk.cc  ldpm_singletet_case1_velbc.cc
examples/beam_simulations/: CMakeLists.txt  README_BEAM.md  README_LDPM_TET4.md  beam_linear_static.cc  beam_linear_static_t4.cc  beam_simulation.cc  test_ldpm_t4.cc  test_ldpm_tet4.cc  test_ldpm_tet4_vtk.cc  test_leapfrog_t4.cc
examples/ldmp_tests/: CMakeLists.txt  dogbone_forcebc.cc  dogbone_velbc.cc  ldpm_singletet.cc  ldpm_singletet_case1_velbc.cc
examples/solver_tests/: CMakeLists.txt  test_feat10_adamw.cc  test_feat10_nesterov.cc
plans/: LDPMTet4_gap_roadmap.md  LDPMTet4_implementation.md  LDPMTet4_target_implementation.md
src/: FEASolver.h  types.h
src/elements/: ANCF3243Data.cu  ANCF3243Data.cuh  ANCF3243DataFunc.cuh  ANCF3443Data.cu  ANCF3443Data.cuh  ANCF3443DataFunc.cuh  ElementBase.h  FEAT10Data.cu  FEAT10Data.cuh  FEAT10DataFunc.cuh  FEAT4Data.cu  FEAT4Data.cuh  FEAT4DataFunc.cuh  LDPM4Data.cu  LDPM4Data.cuh  LDPM4DataFunc.cuh  LDPMTet4Data.cu  LDPMTet4Data.cuh  LDPMTet4DataFunc.cuh  LDPMTet4_gap_roadmap.md  LDPMTet4_implementation.md  LDPMTet4_target_implementation.md
src/materials/: LDPM.cuh  LDPMCusatis.cuh  LDPMTet4.cuh  MaterialModel.cuh  MooneyRivlin.cuh  SVK.cuh
src/solvers/: LeapfrogSolver.cu  LeapfrogSolver.cuh  LinearStaticSolver.cu  LinearStaticSolver.cuh  SolverBase.h  SyncedAdamW.cu  SyncedAdamW.cuh  SyncedAdamWNocoop.cu  SyncedAdamWNocoop.cuh  SyncedNesterov.cu  SyncedNesterov.cuh
src/utils/: cpu_utils.cc  cpu_utils.h  ldpm_mesh_utils.cc  ldpm_mesh_utils.h  mesh_utils.cc  mesh_utils.h  quadrature_utils.h
